5/17/19
Add concurrent limits
Push e621.js and original non-working implementation
First minify copy-paste ready dist release
Add filtering buttons to Mangadex Menu
Port Mangadex Menu to Bookmarklet

5/16/19
Add wiki as submodule and move pixiv notes
Push pixiv.js and original non-working implementation
Seperate Readme and Changelog
Use script.text instead of script.innerText
Add bookmarklet example files
Allow non-iframed scoped bookmarklet
First release and source code tracking